...
                }
            }
        }
        TextField(
            value = reminderTitle,
            onValueChange = { newSpendingName -> reminderTitle = newSpendingName },
            placeholder = { Text(text = "Title") },
            modifier = Modifier
                .padding(10.dp)
                .fillMaxWidth()
        )
        TextField(
            value = reminderDescription,
            onValueChange = { reminderDescription = it },
            label = {
                Text(text = "Category")
            },
            modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp)
        )
        Row(
...
